--- a/templates/backup_gitlab.sh.j2
+++ b/templates/backup_gitlab.sh.j2
@@ -4,3 +4,6 @@ rm -f {{ gitlab_home }}/data/backups/*_gitlab_config.tar.gz
 tar -cpzf $FILENAME --directory={{ gitlab_home }}/ config
 s3cmd put $FILENAME s3://$GITLAB_S3_PREFIX
 /usr/bin/docker exec -t {{ gitlab_container_name }} gitlab-backup create CRON=1 STRATEGY=copy
+if [[ -z $(ls -la /var/lib/gitlab/gitlab/data/backups | grep _gitlab_backup.tar | awk '{print $7}' | grep $(date +%d)) || -z $(ls -la /var/lib/gitlab/gitlab/data/backups | grep _config.tar.gz | awk '{print $7}' | grep $(date +%d)) ]]; then
+  apprise -t "Failed to create backup" -b "Failed to create backuptest fot gitlab in $(date)" --config=/etc/backup/apprise_config
+fi
