--- a/templates/.s3cfg.j2
+++ b/templates/.s3cfg.j2
@@ -76,6 +76,6 @@ use_http_expect = False
 use_https = True
 use_mime_magic = True
 verbosity = WARNING
-website_endpoint = http://%(bucket)s.s3-website-%(location)s.amazonaws.com/
+website_endpoint = {{ s3cmd_website_endpoint }}
 website_error =
 website_index = index.html
